new api to send email
