# routes/routes.go
@@ -20,5 +20,6 @@ func LoadRoute(mgr manager.Manager) {
 	api.NewAuthApi(router.Group("/auth"), mgr)
 	api.NewBankApi(router.Group("/bank"), mgr)
 	api.NewFileApi(router.Group("/file"), mgr)
+	api.NewMailApi(router.Group("/mail"), mgr)
 	api.NewRajaongkirApi(router.Group("/rajaongkir"), mgr)
 }
